--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="index.css"/>
     <meta charset="utf-8">
-    <title>菜鸟教程(runoob.com)</title>
+    <title>美丽卿卿</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<h1>我的第一个标题</h1>
-<p>我的第一个段落。</p>
+
+<div class="block">
+    <h1>此心安处是吾乡</h1>
+    <p>惊鸿照影</p>
+
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/7657A0DB3A53CB3C6E9C0E33B8B9D322.png" alt=""/>
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/BAEB07D0B0065EEE1241C601DFDFDCF8.png" alt=""/>
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/F290CC42E0E01A6A7E45AA057A03C16A.png" alt=""/>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <p>我欲与君相知，长命无绝衰。</p>
+    <p>山无陵，江水为竭，冬雷震震，夏雨雪，天地合，乃敢与君绝。</p>
+</div>
+
 </body>
 </html>
