--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+<div class="block">
+    <h1>此心安处是吾乡</h1>
+    <p>惊鸿照影</p>
 
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://z1.ax1x.com/2023/10/14/pi9S4eK.jpg" alt=""/>
+            </div>
+            <div class="carousel-item">
+                <img src="https://z1.ax1x.com/2023/10/14/pi9SWsx.jpg" alt=""/>
+            </div>
+            <div class="carousel-item">
+                <img src="https://z1.ax1x.com/2023/10/14/pi9SfL6.jpg" alt=""/>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <p>我欲与君相知，长命无绝衰。</p>
+    <p>山无陵，江水为竭，冬雷震震，夏雨雪，天地合，乃敢与君绝。</p>
+</div>
 
 </body>
 </html>
