--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://z1.ax1x.com/2023/10/14/pi9S4eK.jpg" alt=""/>
+                <img src="https://s3.bmp.ovh/imgs/2023/10/26/f4903d4508863bff.png" alt=""/>
             </div>
             <div class="carousel-item">
-                <img src="https://z1.ax1x.com/2023/10/14/pi9SWsx.jpg" alt=""/>
+                <img src="https://s3.bmp.ovh/imgs/2023/10/26/3fe3466fdc28ef8e.png" alt=""/>
             </div>
             <div class="carousel-item">
-                <img src="https://z1.ax1x.com/2023/10/14/pi9SfL6.jpg" alt=""/>
+                <img src="https://s3.bmp.ovh/imgs/2023/10/26/b74b78cccb8a7ecc.png" alt=""/>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
