--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
     <p>山无陵，江水为竭，冬雷震震，夏雨雪，天地合，乃敢与君绝。</p>
 </div>
 
+<div class="mohao">
+    <iframe src="2.html" height="100%" width="100%" style="height: 600px; overflow: hidden"></iframe>
+    <iframe src="I%20love%20you.html" height="100%" width="100%" style="height: 600px; overflow: hidden"></iframe>
+</div>
 </body>
 </html>
