--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-<!--                <img src="https://s3.bmp.ovh/imgs/2023/10/26/f4903d4508863bff.png" alt=""/>-->
-                <img src="./1.jpg" alt=""/>
+                <img src="https://s3.bmp.ovh/imgs/2023/10/26/f4903d4508863bff.png" alt=""/>
+<!--                <img src="./1.jpg" alt=""/>-->
             </div>
             <div class="carousel-item">
-<!--                <img src="https://s3.bmp.ovh/imgs/2023/10/26/3fe3466fdc28ef8e.png" alt=""/>-->
-                <img src="./1.jpg" alt=""/>
+                <img src="https://s3.bmp.ovh/imgs/2023/10/26/3fe3466fdc28ef8e.png" alt=""/>
+<!--                <img src="./1.jpg" alt=""/>-->
             </div>
             <div class="carousel-item">
-<!--                <img src="https://s3.bmp.ovh/imgs/2023/10/26/b74b78cccb8a7ecc.png" alt=""/>-->
-                <img src="./1.jpg" alt=""/>
+                <img src="https://s3.bmp.ovh/imgs/2023/10/26/b74b78cccb8a7ecc.png" alt=""/>
+<!--                <img src="./1.jpg" alt=""/>-->
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -42,9 +42,9 @@
     <p>山无陵，江水为竭，冬雷震震，夏雨雪，天地合，乃敢与君绝。</p>
 </div>
 
-<div class="mohao">
-    <iframe src="2.html" height="100%" width="100%" style="height: 600px; overflow: hidden"></iframe>
-    <iframe src="I%20love%20you.html" height="100%" width="100%" style="height: 600px; overflow: hidden"></iframe>
-</div>
+<!--<div class="mohao">-->
+<!--    <iframe src="2.html" height="100%" width="100%" style="height: 600px; overflow: hidden"></iframe>-->
+<!--    <iframe src="I%20love%20you.html" height="100%" width="100%" style="height: 600px; overflow: hidden"></iframe>-->
+<!--</div>-->
 </body>
 </html>
